Created pure BoW input

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -25,23 +25,484 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[   0    2    3 ..., 5725 5726 5727]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>spam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Subject: naturally irresistible your corporate...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Subject: unbelievable new homes made easy  im ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Subject: 4 color printing special  request add...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Subject: do not have money , get software cds ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Subject: great nnews  hello , welcome to medzo...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Subject: here ' s a hot play in motion  homela...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Subject: save your money buy getting this thin...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Subject: save your money buy getting this thin...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Subject: brighten those teeth  get your  teeth...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Subject: fpa notice : ebay misrepresentation o...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Subject: search engine position  be the very f...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Subject: only our software is guaranteed 100 %...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Subject: top - level logo and business identit...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Subject: rely on us for your online prescripti...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Subject: guzzle like a fountain  spur m rocks ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Subject: are you losing ? the answer would ama...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Subject: 25 mg did thhe trick  ho receivable w...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Subject: save your money buy getting this thin...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Subject: want to accept credit cards ? 1264322...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>32</td>\n",
+       "      <td>Subject: [ ilug ] guaranteed to lose 10 - 12 l...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>33</td>\n",
+       "      <td>Subject: re : just to her . . .  mdaemon has i...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>34</td>\n",
+       "      <td>Subject: ms 2003 software titles available for...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Subject: failure notice  hi . this is the qmai...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>36</td>\n",
+       "      <td>Subject: claim your free $ 1000 home depot gif...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Subject: perfect logo charset = koi 8 - r \" &gt; ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Subject: extra time - last 5 - 10 times longer...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>40</td>\n",
+       "      <td>Subject: get the best price on your next car !...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Subject: bro check out this awesome new produc...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Subject: hidden gems help get a leg up on the ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>43</td>\n",
+       "      <td>Subject: 10 minutes before sex , lasts for 24 ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3991</th>\n",
+       "      <td>5689</td>\n",
+       "      <td>Subject: tanya ' s trip to stanford  shirley ,...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3992</th>\n",
+       "      <td>5691</td>\n",
+       "      <td>Subject: numbers for sharad agnihotri  hi dale...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3993</th>\n",
+       "      <td>5693</td>\n",
+       "      <td>Subject: re : petrochem desk  yes , i will hav...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3994</th>\n",
+       "      <td>5694</td>\n",
+       "      <td>Subject: ljm model  ryan :  this is the update...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995</th>\n",
+       "      <td>5697</td>\n",
+       "      <td>Subject: research group , recruiting  celeste ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3996</th>\n",
+       "      <td>5698</td>\n",
+       "      <td>Subject: schedule and more . .  dr . kaminski ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3997</th>\n",
+       "      <td>5699</td>\n",
+       "      <td>Subject: re : message from ken rice  vince :  ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3998</th>\n",
+       "      <td>5700</td>\n",
+       "      <td>Subject: re : exploration data as the root of ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3999</th>\n",
+       "      <td>5701</td>\n",
+       "      <td>Subject: rendez - vous reporter : sunday 3 rd ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4000</th>\n",
+       "      <td>5702</td>\n",
+       "      <td>Subject: dr . michelle foss - energy institute...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4001</th>\n",
+       "      <td>5703</td>\n",
+       "      <td>Subject: rice / enron finance seminar series  ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4002</th>\n",
+       "      <td>5704</td>\n",
+       "      <td>Subject: storage model security  stinson ,  i ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4003</th>\n",
+       "      <td>5705</td>\n",
+       "      <td>Subject: re : meeting w kevin hannon  vince an...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4004</th>\n",
+       "      <td>5706</td>\n",
+       "      <td>Subject: e - mail and voicemail retention poli...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4005</th>\n",
+       "      <td>5707</td>\n",
+       "      <td>Subject: approval is overdue : access request ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4006</th>\n",
+       "      <td>5709</td>\n",
+       "      <td>Subject: agenda for larry thorne ' s presentat...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4007</th>\n",
+       "      <td>5710</td>\n",
+       "      <td>Subject: raptors  here is the most recent vers...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4008</th>\n",
+       "      <td>5712</td>\n",
+       "      <td>Subject: 2 - survey / information email 5 - 7 ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4009</th>\n",
+       "      <td>5713</td>\n",
+       "      <td>Subject: promotion  vince , i want to congratu...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4010</th>\n",
+       "      <td>5714</td>\n",
+       "      <td>Subject: re : petronas benchmarking visit  fyi...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4011</th>\n",
+       "      <td>5715</td>\n",
+       "      <td>Subject: request submitted : access request fo...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4012</th>\n",
+       "      <td>5716</td>\n",
+       "      <td>Subject: * special notification * aurora versi...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4013</th>\n",
+       "      <td>5717</td>\n",
+       "      <td>Subject: fwd : update  return - path :  receiv...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4014</th>\n",
+       "      <td>5718</td>\n",
+       "      <td>Subject: altos na gas model  kim , i know you ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4015</th>\n",
+       "      <td>5720</td>\n",
+       "      <td>Subject: re : visit to houston  fyi  - - - - -...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4016</th>\n",
+       "      <td>5722</td>\n",
+       "      <td>Subject: re : vacation  vince :  i just found ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4017</th>\n",
+       "      <td>5724</td>\n",
+       "      <td>Subject: re : receipts from visit  jim ,  than...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4018</th>\n",
+       "      <td>5725</td>\n",
+       "      <td>Subject: re : enron case study update  wow ! a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4019</th>\n",
+       "      <td>5726</td>\n",
+       "      <td>Subject: re : interest  david ,  please , call...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4020</th>\n",
+       "      <td>5727</td>\n",
+       "      <td>Subject: news : aurora 5 . 2 update  aurora ve...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4021 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                                               text  spam\n",
+       "0        0  Subject: naturally irresistible your corporate...     1\n",
+       "1        2  Subject: unbelievable new homes made easy  im ...     1\n",
+       "2        3  Subject: 4 color printing special  request add...     1\n",
+       "3        4  Subject: do not have money , get software cds ...     1\n",
+       "4        5  Subject: great nnews  hello , welcome to medzo...     1\n",
+       "5        6  Subject: here ' s a hot play in motion  homela...     1\n",
+       "6        9  Subject: save your money buy getting this thin...     1\n",
+       "7       11  Subject: save your money buy getting this thin...     1\n",
+       "8       12  Subject: brighten those teeth  get your  teeth...     1\n",
+       "9       14  Subject: fpa notice : ebay misrepresentation o...     1\n",
+       "10      15  Subject: search engine position  be the very f...     1\n",
+       "11      16  Subject: only our software is guaranteed 100 %...     1\n",
+       "12      22  Subject: top - level logo and business identit...     1\n",
+       "13      24  Subject: rely on us for your online prescripti...     1\n",
+       "14      25  Subject: guzzle like a fountain  spur m rocks ...     1\n",
+       "15      26  Subject: are you losing ? the answer would ama...     1\n",
+       "16      28  Subject: 25 mg did thhe trick  ho receivable w...     1\n",
+       "17      29  Subject: save your money buy getting this thin...     1\n",
+       "18      30  Subject: want to accept credit cards ? 1264322...     1\n",
+       "19      32  Subject: [ ilug ] guaranteed to lose 10 - 12 l...     1\n",
+       "20      33  Subject: re : just to her . . .  mdaemon has i...     1\n",
+       "21      34  Subject: ms 2003 software titles available for...     1\n",
+       "22      35  Subject: failure notice  hi . this is the qmai...     1\n",
+       "23      36  Subject: claim your free $ 1000 home depot gif...     1\n",
+       "24      37  Subject: perfect logo charset = koi 8 - r \" > ...     1\n",
+       "25      39  Subject: extra time - last 5 - 10 times longer...     1\n",
+       "26      40  Subject: get the best price on your next car !...     1\n",
+       "27      41  Subject: bro check out this awesome new produc...     1\n",
+       "28      42  Subject: hidden gems help get a leg up on the ...     1\n",
+       "29      43  Subject: 10 minutes before sex , lasts for 24 ...     1\n",
+       "...    ...                                                ...   ...\n",
+       "3991  5689  Subject: tanya ' s trip to stanford  shirley ,...     0\n",
+       "3992  5691  Subject: numbers for sharad agnihotri  hi dale...     0\n",
+       "3993  5693  Subject: re : petrochem desk  yes , i will hav...     0\n",
+       "3994  5694  Subject: ljm model  ryan :  this is the update...     0\n",
+       "3995  5697  Subject: research group , recruiting  celeste ...     0\n",
+       "3996  5698  Subject: schedule and more . .  dr . kaminski ...     0\n",
+       "3997  5699  Subject: re : message from ken rice  vince :  ...     0\n",
+       "3998  5700  Subject: re : exploration data as the root of ...     0\n",
+       "3999  5701  Subject: rendez - vous reporter : sunday 3 rd ...     0\n",
+       "4000  5702  Subject: dr . michelle foss - energy institute...     0\n",
+       "4001  5703  Subject: rice / enron finance seminar series  ...     0\n",
+       "4002  5704  Subject: storage model security  stinson ,  i ...     0\n",
+       "4003  5705  Subject: re : meeting w kevin hannon  vince an...     0\n",
+       "4004  5706  Subject: e - mail and voicemail retention poli...     0\n",
+       "4005  5707  Subject: approval is overdue : access request ...     0\n",
+       "4006  5709  Subject: agenda for larry thorne ' s presentat...     0\n",
+       "4007  5710  Subject: raptors  here is the most recent vers...     0\n",
+       "4008  5712  Subject: 2 - survey / information email 5 - 7 ...     0\n",
+       "4009  5713  Subject: promotion  vince , i want to congratu...     0\n",
+       "4010  5714  Subject: re : petronas benchmarking visit  fyi...     0\n",
+       "4011  5715  Subject: request submitted : access request fo...     0\n",
+       "4012  5716  Subject: * special notification * aurora versi...     0\n",
+       "4013  5717  Subject: fwd : update  return - path :  receiv...     0\n",
+       "4014  5718  Subject: altos na gas model  kim , i know you ...     0\n",
+       "4015  5720  Subject: re : visit to houston  fyi  - - - - -...     0\n",
+       "4016  5722  Subject: re : vacation  vince :  i just found ...     0\n",
+       "4017  5724  Subject: re : receipts from visit  jim ,  than...     0\n",
+       "4018  5725  Subject: re : enron case study update  wow ! a...     0\n",
+       "4019  5726  Subject: re : interest  david ,  please , call...     0\n",
+       "4020  5727  Subject: news : aurora 5 . 2 update  aurora ve...     0\n",
+       "\n",
+       "[4021 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "train_data = pd.read_csv(os.path.join(path,'emails.train.csv'))\n",
-    "train_data\n",
-    "print(train_data.id.values)"
+    "train_data"
    ]
   },
   {
